test/test_units/test_kclvm/test_types/invalid_test_data/loop/loop_4.k
x: [str] = [i for i in [0] or ["1"]]
